frontend/test/should_fail/uniqueNodeByIndex.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	n:Node{unique[42]};
	
	modify {
	}
}
